[package]
edition = "2024"
name = "pico-throttle"
version = "0.1.0"
resolver = "2"

[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = {  version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-futures = { version = "0.1.2"}
embassy-usb = { version = "0.6.0", features = ["defmt"] }
usbd-hid = "0.10.0"

defmt = "1.1.1"
defmt-rtt = "1.3.0"
# fixed = "1.31.0"
# fixed-macro = "1.2.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# futures = { version = "0.3.32", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
# heapless = "0.9.3"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0" }
embedded-hal-async = "1.0.0"
# embedded-hal-bus = { version = "0.3.0", features = ["async"] }
# embedded-io-async = { version = "0.7.0", features = ["defmt"] }
# embedded-storage = { version = "0.3.1" }
static_cell = "2.1.1"
# portable-atomic = { version = "1.13.1", features = ["critical-section"] }
# log = "0.4.33"
# pio-proc = "0.3.0"
# pio = "0.3.0"
# rand = { version = "0.10.2", default-features = false }

bitflags = "2.13"
derive_more = { version = "2", default-features = false, features = ["try_from"] }
paste = "1"

[profile.release]
debug = true

# Below configs are here to mute the rust-analyzer error.
# "Can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "pico-throttle"
test = false
bench = false

[lints.clippy]
arithmetic_side_effects = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
unwrap_used = "warn"
